--- a/jobbergate_cli/config/application.json
+++ b/jobbergate_cli/config/application.json
@@ -1,10 +1,8 @@
 {
     "application_name": "",
-    "application_description": "",
-    "application_location": "",
-    "application_dir_listing": "",
+    "application_description": "TEST_DESC",
+    "application_location": "TEST_LOC",
+    "application_dir_listing": "TEST_DIR_LISTING",
     "application_dir_listing_acquired": true,
-    "application_owner": "",
-    "created_at": "",
-    "updated_at": ""
+    "application_owner": ""
 }
