--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 *.so
 osu_*
 mpi-*
+test_*
 *demo*
 # Distribution / packaging
 .Python
@@ -22,6 +23,7 @@ parts/
 sdist/
 var/
 wheels/
+starccm_app/
 pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
