--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
-
-x]
+[tox]
 skipsdist = True
 envlist = unit, functional
 skip_missing_interpreters = True
+
 [testenv]
 basepython = python3
 setenv =
   PYTHONPATH = {toxinidir}/lib/:{toxinidir}
 passenv = HOME
+
 [testenv:unit]
 commands =
     coverage run -m unittest discover -s {toxinidir}/tests/unit -v
@@ -16,10 +17,12 @@ commands =
     coverage html \
 	--omit tests/*,mod/*,.tox/*
 deps = -r{toxinidir}/tests/unit/requirements.txt
+
 [testenv:functional]
 changedir = {toxinidir}/tests/functional
 commands = functest-run-suite {posargs}
 deps = -r{toxinidir}/tests/functional/requirements.txt
+
 [testenv:lint]
 commands = flake8 {posargs} jobbergate_cli/
 deps =
@@ -28,6 +31,7 @@ deps =
     flake8-import-order
     pep8-naming
     flake8-colors
+
 [flake8]
 exclude =
     .git,
@@ -37,5 +41,6 @@ exclude =
 max-line-length = 79
 max-complexity = 10
 import-order-style = edited
+
 [isort]
 force_to_top=setuppath
