--- a/jobbergate_cli/config/application.json
+++ b/jobbergate_cli/config/application.json
@@ -1,8 +1,8 @@
 {
     "application_name": "",
-    "application_description": "TEST_DESC",
+    "application_description": "",
     "application_location": "TEST_LOC",
-    "application_dir_listing": "TEST_DIR_LISTING",
+    "application_dir_listing": "",
     "application_dir_listing_acquired": true,
     "application_owner": ""
 }
