#176592008 let's make it easier for tox to install the software

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,15 @@
 [tox]
-skipsdist = True
-envlist = unit, functional
-skip_missing_interpreters = True
+## envlist = unit, functional
+envlist = unit
+## skip_missing_interpreters = True
+extras =
+    dev
 
 [testenv]
 basepython = python3
-setenv =
-  PYTHONPATH = {toxinidir}/lib/:{toxinidir}
-passenv = HOME
+## setenv =
+##   PYTHONPATH = {toxinidir}/lib/:{toxinidir}
+## passenv = HOME
 
 [testenv:unit]
 commands =
@@ -16,12 +18,12 @@ commands =
 	--omit tests/*,mod/*,.tox/*
     coverage html \
 	--omit tests/*,mod/*,.tox/*
-deps = -r{toxinidir}/tests/unit/requirements.txt
+## deps = -r{toxinidir}/tests/unit/requirements.txt
 
-[testenv:functional]
-changedir = {toxinidir}/tests/functional
-commands = functest-run-suite {posargs}
-deps = -r{toxinidir}/tests/functional/requirements.txt
+## [testenv:functional]
+## changedir = {toxinidir}/tests/functional
+## commands = functest-run-suite {posargs}
+## deps = -r{toxinidir}/tests/functional/requirements.txt
 
 [testenv:lint]
 commands = flake8 {posargs} jobbergate_cli/
@@ -42,5 +44,5 @@ max-line-length = 79
 max-complexity = 10
 import-order-style = edited
 
-[isort]
-force_to_top=setuppath
+## [isort]
+## force_to_top=setuppath
