175692008 add pytest dep and restore tox code

--- a/tox.ini
+++ b/tox.ini
@@ -1,29 +1,23 @@
 [tox]
-## envlist = unit, functional
-envlist = unit
-## skip_missing_interpreters = True
+envlist = unit, functional
 extras =
     dev
 
 [testenv]
 basepython = python3
-## setenv =
-##   PYTHONPATH = {toxinidir}/lib/:{toxinidir}
-## passenv = HOME
 
 [testenv:unit]
 commands =
     coverage run -m unittest discover -s {toxinidir}/tests/unit -v
     coverage report \
-	--omit tests/*,mod/*,.tox/*
+        --omit tests/*,mod/*,.tox/*
     coverage html \
-	--omit tests/*,mod/*,.tox/*
-## deps = -r{toxinidir}/tests/unit/requirements.txt
+        --omit tests/*,mod/*,.tox/*
 
-## [testenv:functional]
-## changedir = {toxinidir}/tests/functional
-## commands = functest-run-suite {posargs}
-## deps = -r{toxinidir}/tests/functional/requirements.txt
+[testenv:functional]
+changedir = {toxinidir}/tests/functional
+commands = functest-run-suite {posargs}
+deps = -r{toxinidir}/tests/functional/requirements.txt
 
 [testenv:lint]
 commands = flake8 {posargs} jobbergate_cli/
@@ -44,5 +38,5 @@ max-line-length = 79
 max-complexity = 10
 import-order-style = edited
 
-## [isort]
-## force_to_top=setuppath
+[isort]
+force_to_top=setuppath
