--- a/.github/workflows/test_build_release_edge.yaml
+++ b/.github/workflows/test_build_release_edge.yaml
@@ -12,14 +12,9 @@ jobs:
         with:
           python-version: '3.x'
           architecture: 'x64'
-      - name: "Install tox"
-        run: |
-          #pip install tox
-          exit 0
       - name: "`make lint`"
         run: |
-          #make lint
-          exit 0
+          echo TBD
 
   build-snap:
     name: "Build the jobbergate-cli snap"
