--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,9 @@ exclude =
     mod,
 max-line-length = 120
 max-complexity = 20
-import-order-style = edited
 
 [isort]
-force_to_top = setuppath
+lines_after_imports = 2
+# ignore from..import vs import while sorting a section
+force_sort_within_sections = 1
+profile = black
