175675382 actual unit tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,25 @@
 [tox]
 envlist = unit, functional
-extras =
-    dev
 
 [testenv]
 basepython = python3
+extras =
+    dev
+setenv =
+    JOBBERGATE_API_ENDPOINT = https://jobbergate-api-staging.omnivector.solutions
+    JOBBERGATE_DEBUG = false
+
+
+[pytest]
+addopts =
+    --cov=jobbergate_cli
+    --cov-report=term-missing
+    --cov-fail-under=30
+    -v
 
 [testenv:unit]
 commands =
-    coverage run -m unittest discover -s {toxinidir}/tests/unit -v
-    coverage report \
-        --omit tests/*,mod/*,.tox/*
-    coverage html \
-        --omit tests/*,mod/*,.tox/*
+    pytest {posargs}
 
 [testenv:functional]
 changedir = {toxinidir}/tests/functional
