175675382 github actions run tests and lint checks

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = unit, functional
+envlist = lint, unit
 
 [testenv]
 basepython = python3
@@ -20,11 +20,6 @@ addopts =
 [testenv:unit]
 commands =
     pytest {posargs}
-
-[testenv:functional]
-changedir = {toxinidir}/tests/functional
-commands = functest-run-suite {posargs}
-deps = -r{toxinidir}/tests/functional/requirements.txt
 
 [testenv:lint]
 commands = flake8 {posargs} jobbergate_cli/
