--- a/.github/workflows/test_build_release_edge.yaml
+++ b/.github/workflows/test_build_release_edge.yaml
@@ -3,23 +3,41 @@ name: TestBuildReleaseEdge
 on: pull_request
 
 jobs:
-  lint:
-    name: "Lint codebase (make lint)"
+  test:
+    name: "Lint-check & test codebase"
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v2
+
+      # TODO: make setup python, restore cached deps, install uncached deps a single use-action
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
           architecture: 'x64'
-      - name: "`make lint`"
+      - name: "os-independent pip cache dir"
+        id: pip-cache
         run: |
-          echo TBD
+          echo "::set-output name=dir::$(pip cache dir)"
+      - name: "cache python dependencies"
+        uses: actions/cache@v2
+        with:
+          path: |
+            ${{ steps.pip-cache.outputs.dir }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip -e .[dev]
+
+      ## - name: Setup tmate session
+      ##   uses: mxschmitt/action-tmate@v3
+
+      - name: "`make lint test`"
+        run: make lint test
 
   build-snap:
     name: "Build the jobbergate-cli snap"
     runs-on: "ubuntu-latest"
-    # needs: lint
     steps:
       - uses: actions/checkout@v2
 
@@ -47,14 +65,23 @@ jobs:
           path: ${{ steps.vars.outputs.snap_file }}
           key: jobbergate-cli-${{ hashFiles('*.snap') }}
 
+      - name: Publish a github artifact for the snap
+        uses: actions/upload-artifact@v2
+        with:
+          name: jobbergate-cli-snap-artifact
+          path: ${{ steps.vars.outputs.snap_file }}
+
     outputs:
       snap_file: ${{ steps.vars.outputs.snap_file }}
       snap_hash: ${{ steps.vars.outputs.snap_hash }}
 
+
   release-jobbergate-cli-snap-to-edge:
     name: "Push jobbergate-cli snap to s3"
     runs-on: "ubuntu-latest"
-    needs: [build-snap]
+    needs:
+      - test
+      - build-snap
     steps:
       - name: "Configure AWS Credentials"
         uses: aws-actions/configure-aws-credentials@v1
@@ -73,6 +100,7 @@ jobs:
         shell: bash
         run: |
           aws s3 cp ${{ needs.build-snap.outputs.snap_file }} s3://omnivector-private-assets/snaps/jobbergate-cli/edge/
+
 
   notify-workflow-complete:
     name: notify
