--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,7 +4,7 @@ chardet==3.0.4
 click==7.1.2
 idna==2.10
 inquirer==2.7.0
-jobbergate-cli==0.0.1
+jobbergate-cli==0.0.1+dev
 PyJWT==1.7.1
 python-editor==1.0.4
 PyYAML==5.3.1
@@ -12,5 +12,5 @@ readchar==2.0.1
 requests==2.25.0
 six==1.15.0
 tabulate==0.8.7
-urllib3==1.26.1
+urllib3==1.26.2
 wcwidth==0.2.5
