reordered tox.ini only

--- a/tox.ini
+++ b/tox.ini
@@ -17,12 +17,13 @@ addopts =
     --cov-fail-under=30
     -v
 
+[testenv:lint]
+commands =
+    flake8 {posargs} jobbergate_cli/
+
 [testenv:unit]
 commands =
     pytest {posargs}
-
-[testenv:lint]
-commands = flake8 {posargs} jobbergate_cli/
 
 [flake8]
 exclude =
