switch to home repo's owner in .craft.yml

--- a/.craft.yml
+++ b/.craft.yml
@@ -1,6 +1,6 @@
 minVersion: "0.12.0"
 github:
-  owner: corydodt
+  owner: omnivector-solutions
   repo: jobbergate-cli
 releaseBranchPrefix: release
 changelog: CHANGELOG.md
