--- a/.github/workflows/test_build_release_edge.yaml
+++ b/.github/workflows/test_build_release_edge.yaml
@@ -37,7 +37,7 @@ jobs:
 
   build-snap:
     name: "Build the jobbergate-cli snap"
-    runs-on: "ubuntu-latest"
+    runs-on: "ubuntu-18.04"
     steps:
       - uses: actions/checkout@v2
 
