--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,6 +6,7 @@ idna==2.10
 inquirer==2.7.0
 jobbergate-cli==0.0.1+dev
 PyJWT==1.7.1
+python-dotenv==0.17.1
 python-editor==1.0.4
 PyYAML==5.4
 readchar==2.0.1
