--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -27,7 +27,7 @@ jobs:
           git config user.name omnivector-qa
           git config user.email admin@omnivector.solutions
 
-      - uses: getsentry/craft@master
+      - uses: getsentry/craft@0.22.2
         if: ${{ success() }}
         name: "Craft Publish"
         with:
