--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^0.19.0"
 requests = "^2.26.0"
 tabulate = "^0.8.9"
 urllib3 = "^1.26.7"
+sentry-sdk = "^1.4.3"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
@@ -47,7 +48,7 @@ force_sort_within_sections = "1"
 profile = "black"
 
 [tool.poetry.scripts]
-jobergate = "jobbergate_cli.main:main"
+jobbergate = "jobbergate_cli.main:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
