--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ requests = "^2.26.0"
 tabulate = "^0.8.9"
 urllib3 = "^1.26.7"
 sentry-sdk = "^1.4.3"
+boto3 = "^1.18.64"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
