--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ tabulate = "^0.8.9"
 urllib3 = "^1.26.7"
 sentry-sdk = "^1.4.3"
 boto3 = "^1.18.64"
+loguru = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
